--- a/roles/elastic/security/tasks/main.yml
+++ b/roles/elastic/security/tasks/main.yml
@@ -10,6 +10,15 @@
   tags:
     - security
 
+
+- name: Start service elasticsearch, if not started
+  service:
+    name: elasticsearch
+    state: started    
+  when: es_security == true
+  tags:
+    - security
+
 - name: Run command if security does not exist
 #  shell: printf "Y"|bin/elasticsearch-setup-passwords auto | grep PASSWORD > "/tmp/{{ es_clustername }}-security"
   shell: printf "Y"|bin/elasticsearch-setup-passwords auto  | grep PASSWORD
