--- a/roles/kibana/security/tasks/main.yml
+++ b/roles/kibana/security/tasks/main.yml
@@ -57,8 +57,8 @@
 
 
 - name: Update xpack.security.transport.ssl.keystore.secure_password in keystore
-  shell: printf "{{es_kibana}}"| /usr/share/kibana/bin/kibana-keystore add xpack.security.transport.ssl.keystore.secure_password
-  when: es_security == true and '"xpack.security.transport.ssl.keystore.secure_password" not in keystore.stdout_lines'
+  shell: printf "{{kibana}}"| /usr/share/kibana/bin/kibana-keystore add elasticsearch.password
+  when: es_security == true and '"elasticsearch.password" not in keystore.stdout_lines'
   tags:
     - security
 
