--- a/roles/elastic/configure/tasks/main.yml
+++ b/roles/elastic/configure/tasks/main.yml
@@ -1,6 +1,16 @@
 ---
 # tasks file for configure
 
+
+- name: create data directory for {{ es_clustername}}
+  delegate_to: localhost
+  file:
+    path: "{{ local_install_dir}}/{{ es_clustername}}/certs"
+    state: directory
+  tags:
+    - configure  
+
+
 - name: create data directory
   file:
     path: "{{ data_path}}"
