--- a/roles/kibana/security/tasks/main.yml
+++ b/roles/kibana/security/tasks/main.yml
@@ -33,7 +33,7 @@
   delegate_to: localhost
   set_fact:
 #    kibana: "{{ 'PASSWORD kibana_system = gndlttvbgjj3L3ncX1ti PASSWORD kibana = gndlttvbgjj3L3ncX1ti'  |  regex_search('kibana_system = ([a-zA-Z0-9]*)', '\\1') }}"
-    kibana: "{{ pw  | regex_search('kibana_system = ([a-zA-Z0-9]*)', '\\1') }}"
+    kibana: "{{ pw  | regex_search('kibana_system = ([a-zA-Z0-9]*)', '\\1') | first}}"
   when: es_security == true  
   tags:
     - security
