--- a/roles/easyrsa/configure/tasks/main.yml
+++ b/roles/easyrsa/configure/tasks/main.yml
@@ -35,7 +35,7 @@
 - name: create certs directory 
   delegate_to: localhost
   file:
-    path: "{{ local_install_dir }}/certs"
+    path: "{{ local_install_dir }}/{{ es_clustername}}/certs"
     state: directory
   tags:
     - configure
@@ -43,7 +43,7 @@
 - name: Fetch ca 
   ansible.builtin.fetch:
     src: "{{ er_home}}/bin/pki/ca.crt"
-    dest: "{{ local_install_dir }}/certs/{{ er_rootca }}.crt"
+    dest: "{{ local_install_dir }}/{{ es_clustername}}/certs/{{ er_rootca }}.crt"
     flat: true
   tags:
     - configure
