--- a/roles/kibana/configure/tasks/main.yml
+++ b/roles/kibana/configure/tasks/main.yml
@@ -1,4 +1,24 @@
 ---
+
+- name: encryption_string encryptedSavedObjects
+  set_fact:
+    encryptedSavedObjects: "{{ lookup('password', '{{ local_install_dir}}/{{es_clustername}}/kibana-encryptedSavedObjects chars=ascii_lowercase,digits length=24') }}"  
+  tags:
+    - configure
+
+- name: encryption_string reporting
+  set_fact:
+    reporting: "{{ lookup('password', '{{ local_install_dir}}/{{es_clustername}}/kibana-reporting chars=ascii_lowercase,digits length=24') }}"  
+  tags:
+    - configure
+
+- name: encryption_string security
+  set_fact:
+    security: "{{ lookup('password', '{{ local_install_dir}}/{{es_clustername}}/kibana-security chars=ascii_lowercase,digits length=24') }}"  
+  tags:
+    - configure
+
+
 # tasks file for configure
 - name: Configure kibana.yml
   template:
@@ -57,3 +77,4 @@
     - restart
   tags:
     - configure
+
