--- a/roles/kibana/configure/tasks/main.yml
+++ b/roles/kibana/configure/tasks/main.yml
@@ -1,20 +1,30 @@
 ---
 
+- name: Check for pki dir
+  stat: path="{{ local_install_dir}}/{{es_clustername}}/kibana-encryptedSavedObjects"
+  register: encryption_strings
+  tags:
+    - configure
+
+
 - name: encryption_string encryptedSavedObjects
   set_fact:
     encryptedSavedObjects: "{{ lookup('password', '{{ local_install_dir}}/{{es_clustername}}/kibana-encryptedSavedObjects chars=ascii_lowercase,digits length=24') }}"  
+  when: not encryption_strings.stat.exists
   tags:
     - configure
 
 - name: encryption_string reporting
   set_fact:
     reporting: "{{ lookup('password', '{{ local_install_dir}}/{{es_clustername}}/kibana-reporting chars=ascii_lowercase,digits length=24') }}"  
+  when: not encryption_strings.stat.exists
   tags:
     - configure
 
 - name: encryption_string security
   set_fact:
     security: "{{ lookup('password', '{{ local_install_dir}}/{{es_clustername}}/kibana-security chars=ascii_lowercase,digits length=24') }}"  
+  when: not encryption_strings.stat.exists
   tags:
     - configure
 
