--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -58,7 +58,7 @@
 
   - name: Update xpack.security.transport.ssl.keystore.secure_password in keystore
     shell: printf "{{es_clustername}}"| /usr/share/elasticsearch/bin/elasticsearch-keystore add xpack.security.transport.ssl.keystore.secure_password
-    when: "xpack.security.transport.ssl.keystore.secure_password" not in keystore.stdout_lines'
+    when: '"xpack.security.transport.ssl.keystore.secure_password" not in keystore.stdout_lines'
     tags:
       - ca
 
