--- a/inventories/group_vars/kafka.yml
+++ b/inventories/group_vars/kafka.yml
@@ -2,6 +2,7 @@ ka_user: "kafka"
 ka_group: "kafka"
 ka_home: "/opt/kafka"
 ka_conf: "/etc/kafka"
+ka_log_dir: "/var/log/kafka"
 ka_port: "9092"
 ka_port_repl: "9093"
 ka_data_path: "{{ mount_logical_volume}}/kafka"
