--- a/inventories/group_vars/zookeeper.yml
+++ b/inventories/group_vars/zookeeper.yml
@@ -2,6 +2,7 @@ zk_user: "zookeeper"
 zk_group: "zookeeper"
 zk_home: "/opt/zookeeper"
 zk_conf: "/etc/zookeeper"
+zk_log_dir: "/var/log/zookeeper"
 zk_port: "2181"
 zk_port_mgt1: "2888"
 zk_port_mgt2: "3888"
