--- a/roles/elastic/bootstrap/tasks/main.yml
+++ b/roles/elastic/bootstrap/tasks/main.yml
@@ -13,7 +13,7 @@
   delegate_to: localhost
   set_fact:
 #    kibana: "{{ 'PASSWORD kibana_system = gndlttvbgjj3L3ncX1ti PASSWORD kibana = gndlttvbgjj3L3ncX1ti'  |  regex_search('kibana_system = ([a-zA-Z0-9]*)', '\\1') }}"
-    elastic: "{{ pw |string | regex_search('kibana_system = ([a-zA-Z0-9]*)', '\\1') | first}}"
+    elastic: "{{ pw |string | regex_search('elastic = ([a-zA-Z0-9]*)', '\\1') | first}}"
   when: es_security == true  
   tags:
     - bootstrap
