--- a/inventories/group_vars/all.yml
+++ b/inventories/group_vars/all.yml
@@ -2,7 +2,8 @@ elastic_version: "7.15.2"
 kafka_version: "2.8.1"
 zookeeper_version: "2.8.1"
 scala_version: "2.13"
-local_install_dir: "/opt/ansible/elastic-install/files"
+local_install_root: "/opt/ansible/elastic-install"
+local_install_dir: "{{ local_install_root }}/files"
 remote_install_dir: "/tmp"
 volume_group: 'vg_data'
 logical_volume: 'lv_data'
