--- a/roles/elastic/bootstrap/tasks/main.yml
+++ b/roles/elastic/bootstrap/tasks/main.yml
@@ -12,13 +12,12 @@
 - name: elastic_pw
   delegate_to: localhost
   set_fact:
-#    kibana: "{{ 'PASSWORD kibana_system = gndlttvbgjj3L3ncX1ti PASSWORD kibana = gndlttvbgjj3L3ncX1ti'  |  regex_search('kibana_system = ([a-zA-Z0-9]*)', '\\1') }}"
     elastic_pw: "{{ pw |string | regex_search('elastic = ([a-zA-Z0-9]*)', '\\1') | first}}"
   when: es_security == true  
   tags:
     - bootstrap
 
-- debug: msg="the value of elastic is {{ elastic }}"
+- debug: msg="the value of elastic is {{ elastic_pw }}"
   when: es_security == true  
   tags:
     - bootstrap
