--- a/roles/kibana/security/tasks/main.yml
+++ b/roles/kibana/security/tasks/main.yml
@@ -10,30 +10,12 @@
   tags:
     - security
 
-- debug: msg="the value of pw is {{ pw }}"
-  when: es_security == true  
-  tags:
-    - security
-
-- name: elastic_pw
-  delegate_to: localhost
-  set_fact:
-#    kibana: "{{ 'server1/database42'  | regex_search('server([0-9]+)/database([0-9]+)', '\\1', '\\2') }}"
-    pw: "{{ pw | string   }}"
-  when: es_security == true  
-  tags:
-    - security
-
-- debug: msg="the value of pw is {{ pw }}"
-  when: es_security == true  
-  tags:
-    - security
 
 - name: elastic_pw
   delegate_to: localhost
   set_fact:
 #    kibana: "{{ 'PASSWORD kibana_system = gndlttvbgjj3L3ncX1ti PASSWORD kibana = gndlttvbgjj3L3ncX1ti'  |  regex_search('kibana_system = ([a-zA-Z0-9]*)', '\\1') }}"
-    kibana: "{{ pw  | regex_search('kibana_system = ([a-zA-Z0-9]*)', '\\1') | first}}"
+    kibana: "{{ pw | string  | regex_search('kibana_system = ([a-zA-Z0-9]*)', '\\1') | first}}"
   when: es_security == true  
   tags:
     - security
